# yugioh-intelligence-lakehouse

./: .gitignore  README.md  dev.py  main.py  pyproject.toml  test_spark.py
src/config/: constants.py  schema.py
src/ingestion/: raw_to_bronze.py
src/logic/: collection_manager.py
src/models/: __init__.py
src/quality/: gold_checks.py
src/transformation/: base_transformer.py  bronze_to_silver.py  silver_to_gold.py
src/utils/: logger.py  spark_manager.py  tools.py
tests/: BAC.ipynb  BAS.py
