[project]
name = "yugioh-intelligence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "delta-spark==3.0.0",
    "duckdb>=1.4.3",
    "pydantic>=2.12.5",
    "pyspark==3.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
